--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Customizable Timeline Component",
   "main": "./build/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "react-scripts test",
     "start": "webpack --watch",
     "build": "webpack"
   },
@@ -38,15 +38,15 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "@types/react": "^16.9.49",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-flowtype": "^3.11.1",
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
+    "jest": "^26.4.2",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -66,6 +67,7 @@
   },
   "dependencies": {
     "react-awesome-reveal": "^3.3.1",
+    "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27"
   }
 }
