--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@styled-icons/foundation": "^10.18.0",
     "react-awesome-reveal": "^3.3.1",
     "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27"
